order details now in list & fix overflow comment

--- a/src/app/admin/pages/order-list/order-list.component.scss
+++ b/src/app/admin/pages/order-list/order-list.component.scss
@@ -7,18 +7,32 @@
 
 mat-card {
   margin: 1rem 2rem 1rem 2rem;
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .mat-card-title {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color: var(--color-app-brown) !important;
 }
 
+#clientName {
+  font-size: 2rem;
+}
 .address {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
+}
+
+.productElem {
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
+}
+
+.productTitle {
+  margin-top: 3rem !important;
+}
+//FIXME: MARCHE EN LOCAL PAS EN DEPLOY
+pre {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 1.4rem;
 }
 
 #noOrder {
